# pilot

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  third_party_software.txt
cmake/: FindGLFW3.cmake
shaders/in/: shader.frag  shader.vert
src/: Common.h  PilotEngine.cpp  main.cpp
src/Logger/: Logger.h
src/Shaders/Compile/: ShaderCompiler.cpp  ShaderCompiler.h
src/Util/: FileUtil.h  StringUtil.h
